overley onclick, fixes scrollbar

--- a/src/main.scss
+++ b/src/main.scss
@@ -62,7 +62,6 @@ input {
 .overlay {
     opacity: 0;
     content: "";
-    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
